footer finally aligned correctly

--- a/styles/4.css
+++ b/styles/4.css
@@ -38,7 +38,7 @@ new_tab_footer_background.png*/
 
 #header{
 	height: 33px;
-  margin: 20px 0px 0px 0px;
+  padding: 20px 0px 0px 0px;
 }
 
 #search {
